--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 8 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "MOM マム"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "２４hママ /　２人ボーイズ / ペットなし / 子供が寝たらゲームする"
+  bio    : "２４hママ /　男の子２人 / ペットなし / "
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
