--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ permalink: /:categories/:title/
 paginate: 8 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+show_date: true
 
 include:
   - _pages
