--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,16 @@
+# main links ハンバーガーメニュー
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+  #- title: "Quick-Start Guide"
+  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+   - title: "TOP"
+     url: /
+   - title: "Posts"
+     url: /year-archive/
+   - title: "リスト"
+     url: /category-archive/
+  #- title: "Sample Collections"
+  #  url: /collection-archive/
+   - title: "About"
+     url: /about/
+   - title: "Sitemap"
+     url: /sitemap/
