--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : google-gtag # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : google # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : G-QCP7BDLW7T
-    anonymize_ip         : # true, false (default)
+    anonymize_ip         : # true, false (default)匿名
 
 
 # Site Author
