--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : google # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : google-gtag # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : G-QCP7BDLW7T
     anonymize_ip         : # true, false (default)匿名
